--- a/Mensagens/Mensagens/MainPage.xaml
+++ b/Mensagens/Mensagens/MainPage.xaml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Mensagens.MainPage">
+             x:Class="Mensagens.MainPage"
+             BackgroundImageSource="">
 
     <StackLayout >
         <Frame BackgroundColor="#2196F3" Padding="24" CornerRadius="0">
@@ -10,7 +11,7 @@
         <Grid RowDefinitions="Auto"
               ColumnDefinitions="*">
            
-                <Button BackgroundColor="LightGray" TextColor="Black" Clicked="Button_Clicked" Padding="25" VerticalOptions="Center" HorizontalOptions="Center"/>
+                <Button BackgroundColor="LightGray" TextColor="Black" Clicked="Button_Clicked" Padding="25" VerticalOptions="Center" HorizontalOptions="Center" Text="Conselho"/>
 
             </Grid>
     </StackLayout>
